# notification-service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
app/: Dockerfile  pyproject.toml
app/src/: celery_app.py  db.sqlite3
app/src/notification_service/: settings.py  urls.py  yasg.py
app/src/notifier/: admin.py  apps.py  celery_tasks.py  db_queries.py  factories.py  models.py  serializers.py  signals.py  urls.py  views.py
app/src/notifier/migrations/: 0001_initial.py
app/src/notifier/tests/: test_client_api.py  test_mailing_api.py
py-linters/: Dockerfile  pyproject.toml
