[tool.poetry]
name = "py-linters"
version = "0.1.0"
description = "Linters for python code"
authors = ["LLC \"Devman\""]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "6.0.*"
flake8-cognitive-complexity = "0.1.*"
flake8-commas = "2.1.*"
flake8-builtins = "2.0.*"
flake8-docstrings = "1.6.*"
flake8-pyproject = "1.2.*"
flake8-bugbear = "23.5.*"
pep8-naming = "0.13.*"

[tool.flake8]
ignore = [
    'D100',
    'D101',
    'D102',
    'D103',
    'D104',
    'D105',
    'D106',
    'D107',
    'W503',  # conflicts with W504 https://github.com/mila-iqia/cookiecutter-pyml/issues/10
]
max-line-length = 120
max-complexity = 7
exclude = ["migrations", "manage.py"]
count = true
